--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-angular": "^7.2.1",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "graphql": "^15.9.0",
     "graphql-tag": "^2.12.6",
     "rxjs": "~7.8.0",
