--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@ngxs/store": "^18.1.4",
     "apollo-angular": "^7.2.1",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
